// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tag > Snapshots > should apply 'critical' skin classes 1`] = `
<div>
  <span
    class="_tag_422e8e _tag--critical-filled_422e8e _tag--md_422e8e"
  >
    Tag
  </span>
</div>
`;

exports[`Tag > Snapshots > should apply 'filled' appearance classes 1`] = `
<div>
  <span
    class="_tag_422e8e _tag--primary-filled_422e8e _tag--md_422e8e"
  >
    Tag
  </span>
</div>
`;

exports[`Tag > Snapshots > should apply 'ghost' appearance classes 1`] = `
<div>
  <span
    class="_tag_422e8e _tag--primary-ghost_422e8e _tag--md_422e8e"
  >
    Tag
  </span>
</div>
`;

exports[`Tag > Snapshots > should apply 'lg' size classes 1`] = `
<div>
  <span
    class="_tag_422e8e _tag--primary-filled_422e8e _tag--lg_422e8e"
  >
    Tag
  </span>
</div>
`;

exports[`Tag > Snapshots > should apply 'md' size classes 1`] = `
<div>
  <span
    class="_tag_422e8e _tag--primary-filled_422e8e _tag--md_422e8e"
  >
    Tag
  </span>
</div>
`;

exports[`Tag > Snapshots > should apply 'neutral' skin classes 1`] = `
<div>
  <span
    class="_tag_422e8e _tag--neutral-filled_422e8e _tag--md_422e8e"
  >
    Tag
  </span>
</div>
`;

exports[`Tag > Snapshots > should apply 'outline' appearance classes 1`] = `
<div>
  <span
    class="_tag_422e8e _tag--primary-outline_422e8e _tag--md_422e8e"
  >
    Tag
  </span>
</div>
`;

exports[`Tag > Snapshots > should apply 'primary' skin classes 1`] = `
<div>
  <span
    class="_tag_422e8e _tag--primary-filled_422e8e _tag--md_422e8e"
  >
    Tag
  </span>
</div>
`;

exports[`Tag > Snapshots > should apply 'secondary' skin classes 1`] = `
<div>
  <span
    class="_tag_422e8e _tag--secondary-filled_422e8e _tag--md_422e8e"
  >
    Tag
  </span>
</div>
`;

exports[`Tag > Snapshots > should apply 'sm' size classes 1`] = `
<div>
  <span
    class="_tag_422e8e _tag--primary-filled_422e8e _tag--sm_422e8e"
  >
    Tag
  </span>
</div>
`;

exports[`Tag > Snapshots > should apply 'soft' appearance classes 1`] = `
<div>
  <span
    class="_tag_422e8e _tag--primary-soft_422e8e _tag--md_422e8e"
  >
    Tag
  </span>
</div>
`;

exports[`Tag > Snapshots > should apply 'success' skin classes 1`] = `
<div>
  <span
    class="_tag_422e8e _tag--success-filled_422e8e _tag--md_422e8e"
  >
    Tag
  </span>
</div>
`;

exports[`Tag > Snapshots > should apply 'xs' size classes 1`] = `
<div>
  <span
    class="_tag_422e8e _tag--primary-filled_422e8e _tag--xs_422e8e"
  >
    Tag
  </span>
</div>
`;

exports[`Tag > Snapshots > should render additional classes 1`] = `
<div>
  <span
    class="_tag_422e8e _tag--primary-filled_422e8e _tag--md_422e8e other-class"
  >
    Tag
  </span>
</div>
`;

exports[`Tag > Snapshots > should render left slot content 1`] = `
<div>
  <span
    class="_tag_422e8e _tag--primary-filled_422e8e _tag--md_422e8e"
  >
    <span
      class="_tag__left_422e8e"
    >
      Left slot
    </span>
    Tag
  </span>
</div>
`;

exports[`Tag > Snapshots > should render right slot content 1`] = `
<div>
  <span
    class="_tag_422e8e _tag--primary-filled_422e8e _tag--md_422e8e"
  >
    Tag
    <span
      class="_tag__right_422e8e"
    >
      Right slot
    </span>
  </span>
</div>
`;

exports[`Tag > Snapshots > should renders component as anchor 1`] = `
<DocumentFragment>
  <a
    class="_tag_422e8e _tag--primary-filled_422e8e _tag--md_422e8e"
    href="#"
  >
    Tag
  </a>
</DocumentFragment>
`;

exports[`Tag > Snapshots > should renders default component 1`] = `
<div>
  <span
    class="_tag_422e8e _tag--primary-filled_422e8e _tag--md_422e8e"
  >
    Tag
  </span>
</div>
`;
